fix the URL/URI propery editor tests so they run on windows, too.
git-svn-id: https://svn.jboss.org/repos/common/common-core/trunk@2757 15291643-af16-0410-b526-a589213603f9